--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "postcss-preset-env": "^6.7.0",
     "pug": "^3.0.0",
     "stylus": "^0.54.8"
+  },
+  "dependencies": {
+    "active-menu-link": "^1.1.8"
   }
 }
